# PureRemove

./: .gitignore  build.bat  dev.bat  index.html  install.bat  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitkeep
src-tauri/src/: commands.rs  error.rs  image_processor.rs  lib.rs  main.rs  ml_engine.rs
src/components/: BatchList.tsx  DropZone.tsx  OutputOptions.tsx
src/lib/: utils.ts
src/types/: index.ts
