[package]
name = "pure-remove"
version = "1.0.0"
edition = "2021"

[lib]
name = "pure_remove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
anyhow          = "1"
thiserror       = "2"
once_cell       = "1"
base64          = "0.22"
tokio           = { version = "1", features = ["full"] }
rayon           = "1"

# ML inference
ort             = { version = "=2.0.0-rc.11", features = ["download-binaries"] }
ndarray         = "0.15"

# Image processing
image           = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "webp",
    "gif", "bmp", "tiff", "ico",
    "tga", "pnm", "hdr", "ff", "qoi",
    "rayon",
] }
resvg           = "0.44"

# Clipboard
arboard         = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
